--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bosscrowns-games",
-   "homepage": "https://hrhelpdesk.github.io/bosscrowns-games",
+  "homepage": "https://hrhelpdesk.github.io/bosscrowns-games",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,7 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
